[kitty] update colorscheme

--- a/negi3wm/.config/kitty/kitty.conf
+++ b/negi3wm/.config/kitty/kitty.conf
@@ -4,6 +4,7 @@ italic_font      Iosevka Italic Nerd Font Complete Mono
 bold_italic_font Iosevka Bold Italic Nerd Font Complete Mono
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 # symbol_map codepoints Font Family Name
+# font_features none
 font_size 19.0
 force_ltr no
 
@@ -12,88 +13,10 @@ adjust_column_width 0
 adjust_baseline 0
 disable_ligatures never
 
-#: Choose how you want to handle multi-character ligatures. The
-#: default is to always render them.  You can tell kitty to not render
-#: them when the cursor is over them by using cursor to make editing
-#: easier, or have kitty never render them at all by using always, if
-#: you don't like them. The ligature strategy can be set per-window
-#: either using the kitty remote control facility or by defining
-#: shortcuts for it in kitty.conf, for example::
-
-#:     map alt+1 disable_ligatures_in active always
-#:     map alt+2 disable_ligatures_in all never
-#:     map alt+3 disable_ligatures_in tab cursor
-
-#: Note that this refers to programming ligatures, typically
-#: implemented using the calt OpenType feature. For disabling general
-#: ligatures, use the font_features setting.
-
-# font_features none
-
-#: Choose exactly which OpenType features to enable or disable. This
-#: is useful as some fonts might have features worthwhile in a
-#: terminal. For example, Fira Code Retina includes a discretionary
-#: feature, zero, which in that font changes the appearance of the
-#: zero (0), to make it more easily distinguishable from Ø. Fira Code
-#: Retina also includes other discretionary features known as
-#: Stylistic Sets which have the tags ss01 through ss20.
-
-#: For the exact syntax to use for individual features, see the
-#: Harfbuzz documentation <https://harfbuzz.github.io/harfbuzz-hb-
-#: common.html#hb-feature-from-string>.
-
-#: Note that this code is indexed by PostScript name, and not the font
-#: family. This allows you to define very precise feature settings;
-#: e.g. you can disable a feature in the italic font but not in the
-#: regular font.
-
-#: On Linux, these are read from the FontConfig database first and
-#: then this, setting is applied, so they can be configured in a
-#: single, central place.
-
-#: To get the PostScript name for a font, use kitty + list-fonts
-#: --psnames:
-
-#: .. code-block:: sh
-
-#:     $ kitty + list-fonts --psnames | grep Fira
-#:     Fira Code
-#:     Fira Code Bold (FiraCode-Bold)
-#:     Fira Code Light (FiraCode-Light)
-#:     Fira Code Medium (FiraCode-Medium)
-#:     Fira Code Regular (FiraCode-Regular)
-#:     Fira Code Retina (FiraCode-Retina)
-
-#: The part in brackets is the PostScript name.
-
-#: Enable alternate zero and oldstyle numerals::
-
-#:     font_features FiraCode-Retina +zero +onum
-
-#: Enable only alternate zero::
-
-#:     font_features FiraCode-Retina +zero
-
-#: Disable the normal ligatures, but keep the calt feature which (in
-#: this font) breaks up monotony::
-
-#:     font_features TT2020StyleB-Regular -liga +calt
-
-#: In conjunction with force_ltr, you may want to disable Arabic
-#: shaping entirely, and only look at their isolated forms if they
-#: show up in a document. You can do this with e.g.::
-
-#:     font_features UnifontMedium +isol -medi -fina -init
-
 box_drawing_scale 0.001, 1, 1.5, 2
 
-#: Change the sizes of the lines used for the box drawing unicode
-#: characters These values are in pts. They will be scaled by the
-#: monitor DPI to arrive at a pixel value. There must be four values
-#: corresponding to thin, normal, thick, and very thick lines.
-
-cursor #cccccc
-cursor_text_color #111111
+cursor #375BC1
+cursor_text_color #000000
 cursor_shape block
 cursor_beam_thickness 1.5
 cursor_underline_thickness 2.0
@@ -108,10 +31,8 @@ wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 1.0
 
 mouse_hide_wait 3.0
-url_color #0087bd
 
-#: The color and style for highlighting URLs on mouse-over. url_style
-#: can be one of: none, single, double, curly
+url_color #0087bd
 url_style curly
 open_url_with default
 url_prefixes http https file ftp gemini irc gopher mailto news git
@@ -149,20 +70,7 @@ mouse_map shift+left          triplepress ungrabbed,grabbed mouse_selection line
 mouse_map shift+ctrl+alt+left triplepress ungrabbed,grabbed mouse_selection line_from_point
 mouse_map shift+right press ungrabbed,grabbed mouse_selection extend
 
-#: Delay (in milliseconds) between screen updates. Decreasing it,
-#: increases frames-per-second (FPS) at the cost of more CPU usage.
-#: The default value yields ~100 FPS which is more than sufficient for
-#: most uses. Note that to actually achieve 100 FPS you have to either
-#: set sync_to_monitor to no or use a monitor with a high refresh
-#: rate. Also, to minimize latency when there is pending input to be
-#: processed, repaint_delay is ignored.
 repaint_delay 4
-
-#: Delay (in milliseconds) before input from the program running in
-#: the terminal is processed. Note that decreasing it will increase
-#: responsiveness, but also increase CPU usage and might cause flicker
-#: in full screen programs that redraw the entire screen on each loop,
-#: because kitty is so fast that partial screen updates will be drawn.
 input_delay 1
 
 sync_to_monitor no
@@ -173,12 +81,11 @@ window_alert_on_bell no
 bell_on_tab no
 command_on_bell none
 
-remember_window_size  yes
 initial_window_width  640
 initial_window_height 400
+remember_window_size  yes
 
 enabled_layouts *
-
 window_resize_step_cells 2
 window_resize_step_lines 2
 window_border_width 0.5pt
@@ -217,7 +124,7 @@ inactive_tab_background #999
 inactive_tab_font_style normal
 tab_bar_background none
 
-foreground #dddddd
+foreground #6C7E96
 background #000000
 background_opacity 0.88
 background_image none
@@ -227,25 +134,153 @@ dynamic_background_opacity no
 background_tint 0.0
 dim_opacity 0.75
 
-selection_foreground #000000
-selection_background #fffacd
+selection_foreground #367bbf
+selection_background #0d1824
 
-color0 #000000
-color8 #767676
-color1 #cc0403
-color9 #f2201f
-color2  #19cb00
-color10 #23fd00
-color3  #cecb00
-color11 #fffd00
-color4  #0d73cc
-color12 #1a8fff
-color5  #cb1ed1
-color13 #fd28ff
-color6  #0dcdcd
-color14 #14ffff
-color7  #dddddd
-color15 #ffffff
+color0 #020202
+color8 #3D3D3D
+color1 #8A2F58
+color9 #CF4F88
+color2  #287373
+color10 #53A6A6
+color3  #914E89
+color11 #BF85CC
+color4  #395573
+color12 #477AB3
+color5  #5E468C
+color13 #7E62B3
+color6  #31658C
+color14 #6096BF
+color7  #899CA1
+color15 #617287
+
+color16 #040408
+color17 #01004C
+color18 #00006C
+color19 #000090
+color20 #0000BA
+color21 #0000FE
+color22 #002B00
+color23 #004E4E
+color24 #005f87
+color25 #005faf
+color26 #005fd7
+color27 #0090FF
+color28 #005200
+color29 #007A51
+color30 #017978
+color30 #357B63
+color31 #285981
+color32 #367CB0
+color33 #4FB3FF
+color34 #007C00
+color35 #00AE73
+color36 #3CAF88
+color37 #00ACAC
+color38 #7BC6FF
+color39 #A2D7FF
+color40 #00AE00
+color41 #00FFA9
+color42 #7DFF7E
+color43 #00d7af
+color44 #4FFFFF
+color46 #00FF01
+color47 #50FFC4
+color48 #A1FFA1
+color49 #00ffaf
+color50 #00ffd7
+color51 #00FFFF
+color52 #380001
+color53 #330021
+color54 #320031
+color55 #260039
+color56 #245361
+color57 #0a3749
+color64 #547D55
+color65 #80AE80
+color66 #8D74B6
+color67 #7C59B5
+color68 #C5A2FE
+color69 #DBC3FF
+color70 #367C36
+color71 #61AD62
+color73 #367CB0
+color74 #5788B0
+color75 #7095B0
+color76 #3FAD88
+color77 #62AE94
+color80 #29626E
+color82 #86DB24
+color83 #55AE24
+color88 #5C0100
+color89 #590038
+color90 #570055
+color91 #3D005D
+color94 #531E00
+color100 #4E3608
+color101 #AC9563
+color104 #AE7CFF
+color105 #D37CFF
+color110 #5B5BBB
+color111 #7778BB
+color112 #95DB18
+color113 #9AEF45
+color114 #C7FE40
+color115 #05C390
+color116 #7CD6EF
+color117 #90EAFE
+color124 #850001
+color125 #810052
+color126 #810081
+color127 #570083
+color130 #7F2E01
+color136 #795000
+color137 #AD893F
+color141 #DBC3FF
+color154 #C3FF01
+color155 #FFFF7D
+color156 #E0FF7D
+color157 #EAFFA2
+color160 #B40001
+color161 #B20072
+color162 #B100B0
+color163 #7700B2
+color166 #B04000
+color172 #AC7300
+color173 #FFC44E
+color177 #E1A1FF
+color196 #FE0000
+color197 #FF01A2
+color198 #FF00FE
+color199 #AA00FF
+color202 #FF5F01
+color208 #FFAA01
+color209 #FFD37C
+color213 #EBC3FF
+color232 #000508
+color233 #010C12
+color234 #04141C
+color235 #071B26
+color236 #0C2430
+color237 #102C3A
+color238 #163444
+color239 #1C3D4E
+color240 #234758
+color241 #2B5062
+color242 #34596C
+color243 #3F6476
+color244 #496E80
+color245 #54788A
+color246 #608394
+color247 #6D8E9E
+color248 #7C99A8
+color249 #8DA6B2
+color250 #95AFBC
+color251 #A4BBC6
+color252 #B7C8D0
+color253 #BFCAD0
+color254 #DBE1E4
+color255 #EEEEEE
 
 mark1_foreground black
 mark1_background #98d3cb
