--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -38,8 +38,8 @@ set -sg escape-time 0 # fixes insert mode exit lag in vim
 bind C-a send-prefix # send the prefix to client inside window (ala nested sessions)
 set-window-option -g aggressive-resize on
 bind C-s last-window
-set -g history-limit 131072
-set -s focus-events on
+set -g history-limit 8191
+set -s focus-events off
 set -g renumber-windows on
 
 # 24-bit color support
