--- a/sys/.config/systemd/user/xorg.service
+++ b/sys/.config/systemd/user/xorg.service
@@ -6,6 +6,7 @@ After=x11.socket
 Before=x11.target
 
 [Service]
+Environment=XDG_SESSION_TYPE=x11
 Environment="XSERVERRC=%E/xinit/xserverrc"
 ExecStartPre=/usr/bin/dbus-update-activation-environment --all
 ExecStart=/usr/bin/xinit /usr/bin/i3 -- :0 -nolisten tcp vt1
