[negwm] rename negi3wm to negwm

--- a/.gitignore
+++ b/.gitignore
@@ -306,6 +306,6 @@ zsh/.zsh/zcomp-sanctum
 ../../music/.config/pulse/cookie
 music/.config/pulse/cookie
 dev/.config/nvim/lua/packer_compiled.lua
-negi3wm/.config/i3/
+negwm/.config/i3/
 music/.config/pulse/*-default-*
 packer/
