--- a/negwm/.config/kitty/kitty.conf
+++ b/negwm/.config/kitty/kitty.conf
@@ -1,12 +1,9 @@
-font_family      Iosevka Medium Nerd Font Complete Mono
-bold_font        Iosevka Bold Nerd Font Complete Mono
-italic_font      Iosevka Italic Nerd Font Complete Mono
-bold_italic_font Iosevka Bold Italic Nerd Font Complete Mono
-# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-# symbol_map codepoints Font Family Name
-# font_features none
+font_family      Iosevka Medium
+bold_font        Iosevka Bold
+italic_font      Iosevka Italic
+bold_italic_font Iosevka Bold
 font_size 19.0
-force_ltr no
+# force_ltr no
 
 adjust_line_height  0
 adjust_column_width 0
