--- a/negwm/.config/iosevka_profile/private-build-plans.toml
+++ b/negwm/.config/iosevka_profile/private-build-plans.toml
@@ -1,97 +1,206 @@
-[buildPlans.iosevka]
-family = "Iosevka"
-spacing = "fontconfig-mono"
-serifs = "sans"
+# Build options
+[buildOptions]
+optimizeWithTtx = false
 
-[buildPlans.iosevka.variants.design]
-turn-v = "curly"
-capital-b = "standard"
-capital-d = "more-rounded"
-capital-g = "toothed"
-capital-i = "short-serifed"
-capital-j = "serifed-both-sides"
-capital-k = "curly"
-capital-l = "motion-serifed"
-capital-m = "flat-bottom"
-capital-q = "taily"
-capital-r = "curly"
-capital-y = "curly"
-capital-z = "curly-motion-serifed"
-a = "doublestorey"
-b = "toothed"
-d = "toothed"
-e = "flat-crossbar"
-f = "serifless"
-g = "doublestorey"
-h = "straight"
-i = "serifed-flat-tailed"
-j = "serifed"
-k = "straight"
-l = "serifed"
-m = "normal"
-n = "straight"
-p = "eared"
-q = "straight"
-r = "serifless"
-t = "standard"
-u = "toothed"
-v = "curly"
-w = "straight"
-x = "straight"
-y = "curly-turn"
-z = "standard"
-lambda = "curly"
-cyrl-capital-u = "curly-turn"
-one = "base-long-top-serif"
-two = "curly-neck"
-three = "flattop"
-four = "semi-open-non-crossing"
-six = "straight-bar"
-seven = "serifed"
-eight = "crossing"
-nine = "open-contour"
-asterisk = "hexlow"
-underscore = "high"
-paragraph-sign = "low"
-paren = "normal"
-brace = "curly"
-number-sign = "upright"
-at = "fourfold"
-dollar = "through"
-percent = "rings"
-lig-ltgteq = "slanted"
-ascii-single-quote = "straight"
-ascii-grave = "straight"
+[buildPlans.iosevka-neg]
+    family = "Iosevka"
+    desc = "Default"
+    calt = false
+    export-glyph-names = true
+    webfont-formats = ['ttf']
+    spacing = "fontconfig-mono"
+    snapshotFamily = 'iosevka'
+    snapshotFeature = '"NWID" off'
+[buildPlans.iosevka-neg.ligations]
+    inherits = "dlig"
+    brace-bar = false
+    brack-bar = false
+    connected-tilde-as-wave = false
+    connected-hyphen-as-solid-line = false
+    connected-hyphen-as-semi-dashed-line = false
+[buildPlans.iosevka-neg.variants.design]
+    apl-form = 'none'
+    digit-form = 'lining'
+    capital-a = 'straight-top-serifed'
+    capital-b = 'standard-unilateral-serifed'
+    capital-c = 'unilateral-inward-serifed'
+    capital-d = 'standard-bilateral-serifed'
+    capital-e = 'top-left-serifed'
+    capital-f = 'top-left-serifed'
+    capital-g = 'toothed-serifed-hooked'
+    capital-h = 'top-left-serifed'
+    capital-i = 'serifed'
+    capital-j = 'serifed-both-sides'
+    capital-k = 'straight-bottom-right-serifed'
+    capital-l = 'motion-serifed'
+    capital-m = 'hanging-motion-serifed'
+    capital-n = 'motion-serifed'
+    capital-p = 'closed-motion-serifed'
+    capital-q = 'crossing-curly-tailed'
+    capital-r = 'straight-open-motion-serifed'
+    capital-s = 'unilateral-inward-serifed'
+    capital-t = 'serifless'
+    capital-u = 'toothed'
+    capital-v = 'straight-motion-serifed'
+    capital-w = 'straight-motion-serifed'
+    capital-x = 'straight-motion-serifed'
+    capital-y = 'curly-serifless'
+    capital-z = 'curly-serifed'
+    a = 'double-storey-tailed'
+    b = 'toothed'
+    c = 'serifless'
+    d = 'toothed-serifed'
+    e = 'flat-crossbar'
+    f = 'flat-hook-tailed'
+    g = 'double-storey'
+    h = 'tailed'
+    i = 'serifed-flat-tailed'
+    j = 'serifed'
+    k = 'symmetric-touching-top-left-serifed'
+    l = 'tailed-serifed'
+    m = 'tailed-top-left-serifed'
+    n = 'tailed'
+    p = 'eared'
+    q = 'straight'
+    r = 'corner-hooked'
+    s = 'bilateral-inward-serifed'
+    t = 'standard'
+    u = 'toothed'
+    v = 'curly-motion-serifed'
+    w = 'straight-motion-serifed'
+    x = 'curly-motion-serifed'
+    y = 'curly-turn-motion-serifed'
+    z = 'curly-serifed'
+    turn-v = 'straight'
+    lower-alpha = 'crossing'
+    lower-delta = 'rounded'
+    capital-gamma = 'serifed'
+    lower-lambda = 'curly-turn'
+    lower-mu = 'tailed'
+    lower-xi = 'flat-top'
+    cyrl-ze = 'serifless'
+    cyrl-capital-ka = 'curly-serifless'
+    cyrl-ka = 'curly-serifless'
+    cyrl-el = 'straight'
+    cyrl-ef = 'top-serifed'
+    cyrl-che = 'standard'
+    cyrl-capital-ya = 'curly'
+    cyrl-ya = 'curly'
+    zero = 'slashed'
+    one = 'base-long-top-serif'
+    two = 'curly-neck'
+    three = 'flat-top'
+    four = 'semi-open'
+    five = 'oblique-upper-left-bar'
+    six = 'closed-contour'
+    seven = 'curly-serifed'
+    eight = 'crossing'
+    nine = 'open-contour'
+    tilde = 'low'
+    asterisk = 'turn-hex-low'
+    underscore = 'low'
+    caret = 'low'
+    paren = 'flat-arc'
+    brace = 'straight'
+    number-sign = 'upright'
+    ampersand = 'closed'
+    at = 'fourfold'
+    dollar = 'interrupted'
+    cent = 'bar-interrupted'
+    percent = 'rings-segmented-slash'
+    bar = 'force-upright'
+    lig-ltgteq = 'slanted'
+    ascii-single-quote = 'straight'
+    ascii-grave = 'straight'
+    question = 'corner'
+    punctuation-dot = 'round'
+    cyrl-capital-ze = 'bilateral-inward-serifed'
 
-[buildPlans.iosevka-custom.weights.regular]
+[collectPlans.iosevka-neg]
+release = true
+from = [
+	"iosevka-neg",
+]
+
+[weights.thin]
+shape = 100
+menu  = 100
+css   = 100
+
+[weights.extralight]
+shape = 200
+menu  = 200
+css   = 200
+
+[weights.light]
+shape = 300
+menu  = 300
+css   = 300
+
+[weights.regular]
 shape = 400
-menu = 400
-css = 400
+menu  = 400
+css   = 400
 
-[buildPlans.iosevka-custom.weights.medium]
+[weights.medium]
 shape = 500
-menu = 500
-css = 500
+menu  = 500
+css   = 500
 
-[buildPlans.iosevka-custom.weights.semibold]
+[weights.semibold]
 shape = 600
-menu = 600
-css = 600
+menu  = 600
+css   = 600
 
-[buildPlans.iosevka-custom.weights.bold]
+[weights.bold]
 shape = 700
-menu = 700
-css = 700
+menu  = 700
+css   = 700
 
-[buildPlans.iosevka-custom.weights.extrabold]
+[weights.extrabold]
 shape = 800
-menu = 800
-css = 800
+menu  = 800
+css   = 800
 
-[buildPlans.iosevka-custom.weights.heavy]
+[weights.heavy]
 shape = 900
-menu = 900
-css = 900
+menu  = 900
+css   = 900
 
-  [buildPlans.iosevka.ligations]
-  inherits = "fsharp"
+# slope mappings (style => slope angle, shape slope grade, menu slope, CSS slope)
+[slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
+[slopes.oblique]
+angle = 9.4
+shape = "oblique"
+menu  = "oblique"
+css   = "oblique"
+
+[slopes.italic]
+angle = 9.4
+shape = "italic"
+menu  = "italic"
+css   = "italic"
+
+# Width mappings (style => shape width, menu width, CSS stretch)
+#   Shape width   : affects the shape of the glyphs
+#   Menu width    : affects the font menu name
+#   CSS stretch   : affects the webfont CSS "font-stretch" property
+#
+# IMPORTANT : Currently "shape" property only support 3 ... 9
+#              and "menu" only support 1 ... 9
+
+[widths.normal]
+shape = 500
+menu  = 5
+css   = "normal"
+
+[widths.extended]
+shape = 600
+menu  = 7
+css   = "expanded"
+
