--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -14,7 +14,7 @@ follow_inside_symlinks "yes"
 connection_timeout "2"
 replaygain "off"
 auto_update "yes"
-mixer_type "none"
+mixer_type "software"
 
 input_cache {
     size "1 GB"
