--- a/media/.config/pipewire/pipewire.conf
+++ b/media/.config/pipewire/pipewire.conf
@@ -20,6 +20,8 @@ context.properties = {
     ## Properties for the DSP configuration.
     default.clock.rate          = 44100
     default.clock.allowed-rates = [ 44100 48000 88200 176400 352800 705600 96000 192000 384000 768000 ]
+    # default.clock.rate          = 768000
+    # default.clock.allowed-rates = [ 176400 352800 705600 96000 192000 384000 768000 ]
     default.clock.quantum       = 1024
     default.clock.min-quantum   = 32
     default.clock.max-quantum   = 8192
