--- a/negwm/.config/i3/config
+++ b/negwm/.config/i3/config
@@ -1,3 +1,18 @@
+set $exit mode \"default\"
+set $i3 ${XDG_CONFIG_HOME}/negwm
+set $term "1 :: ︁ α:term"
+set $web "2 ::  β:web"
+set $dev "3 ::  δ:dev"
+set $doc "4 ::  γ:doc"
+set $draw "5 ::  ζ:draw"
+set $gfx "6 ::  ε:gfx"
+set $obs "7 :: @ ρ:obs"
+set $pic "8 ::  ξ:pic"
+set $steam "9 ::  ι:steam"
+set $sys "10 ::  η:sys"
+set $vm "11 ::  λ:vm"
+set $wine "12 ::  μ:wine"
+
 client.background #000000ee
 client.focused #000011dd #000000ee #ddddee #112211 #0C0C0D
 client.focused_inactive #000000dd #000000ee #005fff #000000 #020204
@@ -76,21 +91,6 @@ font pango: Iosevka Bold 12
 hide_edge_borders both
 show_marks yes
 title_align left
-set $exit mode \"default\"
-set $i3 ${XDG_CONFIG_HOME}/negwm
-set $term "1 :: ︁ α:term"
-set $web "2 ::  β:web"
-set $dev "3 ::  δ:dev"
-set $doc "4 ::  γ:doc"
-set $draw "5 ::  ζ:draw"
-set $gfx "6 ::  ε:gfx"
-set $obs "7 :: @ ρ:obs"
-set $pic "8 ::  ξ:pic"
-set $steam "9 ::  ι:steam"
-set $sys "10 ::  η:sys"
-set $vm "11 ::  λ:vm"
-set $wine "12 ::  μ:wine"
-
 set $actions exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send actions
 set $circle exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send circle
 set $conf_gen exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send conf_gen
@@ -146,6 +146,7 @@ bindsym Mod4+apostrophe exec ${XDG_CONFIG_HOME}/negwm/bin/i3-full-reload
 bindsym Mod4+c exec ~/bin/clip
 bindsym Mod4+g exec ~/bin/g
 bindsym Mod4+p exec ~/bin/rofi-tmux-urls
+bindsym Mod4+m exec ~/bin/music-rename current
 bindsym Mod4+Shift+6 exec ~/bin/wl
 bindsym Mod4+Shift+8 exec playerctl volume 1.0 || amixer -q set Master 65536 unmute
 bindsym Mod4+Shift+9 exec dunstctl history-pop
