--- a/sys/.config/btop/btop.conf
+++ b/sys/.config/btop/btop.conf
@@ -1,4 +1,4 @@
-#? Config file for btop v. 1.2.0
+#? Config file for btop v. 1.2.5
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
@@ -20,7 +20,7 @@ force_tty = False
 #* Example: "cpu:0:default,mem:0:tty,proc:1:default cpu:0:braille,proc:0:tty"
 presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:default cpu:0:block,net:0:tty"
 
-#* Set to True to enable "h,j,k,l" keys for directional control in lists.
+#* Set to True to enable "h,j,k,l,g,G" keys for directional control in lists.
 #* Conflicting keys for h:"help" and k:"kill" is accessible while holding shift.
 vim_keys = True
 
@@ -52,8 +52,8 @@ shown_boxes = "cpu mem proc"
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 1000
 
-#* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
-#* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
+#* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
+#* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
 proc_sorting = "cpu lazy"
 
 #* Reverse sorting order, True or False.
@@ -158,6 +158,9 @@ only_physical = True
 
 #* Read disks list from /etc/fstab. This also disables only_physical.
 use_fstab = True
+
+#* Set to true to show available disk space for privileged users.
+disk_free_priv = False
 
 #* Toggles if io activity % (disk busy time) should be shown in regular disk usage view.
 show_io_stat = True
