--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -1,4 +1,4 @@
-#? Config file for bpytop v. 1.0.67
+#? Config file for bpytop v. 1.0.68
 
 #* Color theme, looks for a .theme file in "/usr/[local/]share/bpytop/themes" and "~/.config/bpytop/themes", "Default" for builtin default theme.
 #* Prefix name by a plus sign (+) for a theme located in user themes folder, i.e. color_theme="+monokai"
@@ -11,7 +11,7 @@ theme_background=True
 truecolor=True
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes="cpu mem net proc"
+shown_boxes="cpu net proc"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs.
 update_ms=4000
@@ -22,10 +22,10 @@ proc_update_mult=2
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" updates top process over time, "cpu responsive" updates top process directly.
-proc_sorting="cpu responsive"
+proc_sorting="cpu lazy"
 
 #* Reverse sorting order, True or False.
-proc_reversed=False
+proc_reversed=True
 
 #* Show processes as a tree
 proc_tree=False
@@ -40,7 +40,7 @@ proc_colors=True
 proc_gradient=True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core=False
+proc_per_core=True
 
 #* Show process memory as bytes instead of percent
 proc_mem_bytes=True
