--- a/negwm/.config/picom/picom.conf
+++ b/negwm/.config/picom/picom.conf
@@ -40,6 +40,7 @@ blur-background-exclude: [
     "class_i = 'nwim'",
     "class_g = 'term'",
     "class_g = 'nwim'",
+    "window_type = 'dnd'",
 ];
 # blur: { method = "dual_kawase"; blur-strengh=7; };
 blur: { method = "gaussian"; size = 30; deviation = 128; };
