--- a/negwm/.config/i3/config
+++ b/negwm/.config/i3/config
@@ -28,7 +28,7 @@ force_display_urgency_hint 2000 ms
 mouse_warping none
 workspace_layout tabbed
 set $scratchpad-discord [class="discord"]
-set $scratchpad-im [class="^(KotatogramDesktop|myteam|Skype|Slack|TelegramDesktop|zoom)$"]
+set $scratchpad-im [class="^(KotatogramDesktop|vkteams|Skype|Slack|TelegramDesktop|zoom)$"]
 set $scratchpad-ncmpcpp [class="ncmpcpp"]
 set $scratchpad-neomutt [class="mutterfox" instance="^(mutterfox|neomutt)$"]
 set $scratchpad-password [instance="1password"]
@@ -37,15 +37,15 @@ set $scratchpad-torrment [instance="torrment"]
 set $scratchpad-transients [window_role="^(GtkFileChooserDialog|Organizer|Manager)$"]
 set $scratchpad-webcam [instance="webcam"]
 
-for_window $scratchpad-discord move scratchpad, move absolute position 1936 825, resize set 1898 1273
-for_window $scratchpad-im move scratchpad, move absolute position 2536 2, resize set 1304 2109
-for_window $scratchpad-ncmpcpp move scratchpad, move absolute position 753 1181, resize set 2251 852
-for_window $scratchpad-neomutt move scratchpad, move absolute position 104 0, resize set 3670 2228
-for_window $scratchpad-password move scratchpad, move absolute position 2150 1272, resize set 1690 838
-for_window $scratchpad-teardrop move scratchpad, move absolute position 0 0, resize set 3840 1300
-for_window $scratchpad-torrment move scratchpad, move absolute position 0 0, resize set 3840 1300
-for_window $scratchpad-transients move scratchpad, move absolute position 693 1310, resize set 1812 797
-for_window $scratchpad-webcam move scratchpad, move absolute position 1368 268, resize set 2463 1880
+for_window $scratchpad-discord floating enable
+for_window $scratchpad-im floating enable
+for_window $scratchpad-ncmpcpp floating enable
+for_window $scratchpad-neomutt floating enable
+for_window $scratchpad-password floating enable
+for_window $scratchpad-teardrop floating enable
+for_window $scratchpad-torrment floating enable
+for_window $scratchpad-transients move scratchpad, move absolute position 346 655, resize set 906 398
+for_window $scratchpad-webcam floating enable
 set $circle-bitwig [class="Bitwig Studio"]
 set $circle-doc [class="^(Zathura|cr3)$"]
 set $circle-lutris [class="^(Wine|Lutris)$"]
@@ -91,14 +91,14 @@ font pango: Iosevka Bold 12
 hide_edge_borders both
 show_marks yes
 title_align left
-set $actions exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send actions
-set $circle exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send circle
-set $conf_gen exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send conf_gen
-set $executor exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send executor
-set $fullscreen exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send fullscreen
-set $menu exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send menu
-set $remember_focused exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send remember_focused
-set $scratchpad exec --no-startup-id ${XDG_CONFIG_HOME}/negwm/bin/send scratchpad
+set $actions nop actions
+set $circle nop circle
+set $conf_gen nop conf_gen
+set $executor nop executor
+set $fullscreen nop fullscreen
+set $menu nop menu
+set $remember_focused nop remember_focused
+set $scratchpad nop scratchpad
 
 
 bindsym Mod4+q  fullscreen toggle
@@ -142,7 +142,6 @@ bindsym Mod4+Control+4 exec ~/bin/screenshot -r
 bindsym Mod4+Shift+4 exec flameshot gui
 bindsym Mod1+grave exec rofi -show run -show-icons -disable-history -theme neg
 bindsym Mod4+8 exec playerctl volume 0.0 || amixer -q set Master 0 mute
-bindsym Mod4+apostrophe exec ${XDG_CONFIG_HOME}/negwm/bin/i3-full-reload
 bindsym Mod4+c exec ~/bin/clip
 bindsym Mod4+g exec ~/bin/g
 bindsym Mod4+p exec ~/bin/rofi-tmux-urls
@@ -150,13 +149,14 @@ bindsym Mod4+m exec ~/bin/music-rename current
 bindsym Mod4+Shift+6 exec ~/bin/wl
 bindsym Mod4+Shift+8 exec playerctl volume 1.0 || amixer -q set Master 65536 unmute
 bindsym Mod4+Shift+9 exec dunstctl history-pop
-bindsym Mod4+Shift+apostrophe exec i3-msg restart
 bindsym Mod4+Shift+i exec ~/bin/rofi-nm
 bindsym Mod4+Shift+l exec ~/bin/rofi-lutris
 bindsym Mod4+Shift+m exec ~/bin/rofi-audio
 bindsym Mod4+Shift+y exec ~/bin/clip youtube-dw-list
 bindsym Mod4+space exec dunstctl close-all
 bindsym XF86Sleep exec sudo systemctl suspend
+bindsym Mod4+apostrophe reload
+bindsym Mod4+Shift+apostrophe restart
 bindsym Mod4+v $scratchpad toggle discord
 bindsym Mod4+e $scratchpad toggle im
 bindsym Mod4+f $scratchpad toggle ncmpcpp
@@ -213,7 +213,7 @@ mode spec {
 	bindsym Shift+i $menu icon_theme,$exit
 	bindsym i $menu pulse_input,$exit
 	bindsym o $menu pulse_output,$exit
-	bindsym m $menu xprop,$exit
+	bindsym m $menu xprop_show,$exit
 	bindsym t $scratchpad subtag im tel,$exit
 	bindsym w $scratchpad toggle webcam,$exit
 	bindsym f $circle subtag web firefox,$exit
