--- a/sys/.config/systemd/user/negwm-autostart.service
+++ b/sys/.config/systemd/user/negwm-autostart.service
@@ -3,5 +3,5 @@ Description=Startup stuff depended on negwm
 After=negwm.service
 
 [Service]
-ExecStart=%E/negwm/bin/send circle next term
+ExecStart=/bin/dash -c "echo 'circle next term' | /usr/bin/nc localhost 15555 -w 0"
 Restart=on-failure
