[picom] ultra-fast fading to remove all glitches

--- a/negwm/.config/picom/picom.conf
+++ b/negwm/.config/picom/picom.conf
@@ -2,7 +2,11 @@ inactive-opacity: 1.0;
 active-opacity: 1.0;
 frame-opacity: 1.0;
 vsync: false;
-fading: false;
+fading = true;				# Fade windows during opacity changes.
+fade-delta = 0;				# The time between steps in a fade in milliseconds. (default 10).
+fade-in-step = 0.028;		# Opacity change between steps while fading in. (default 0.028).
+fade-out-step = 0.03;		# Opacity change between steps while fading out. (default 0.03).
+no-fading-openclose = true;	# Fade windows in/out when opening/closing.
 unredir-if-possible: true;
 detect-rounded-corners: false;
 detect-client-opacity: true;
