[ncmpcpp] update format

--- a/music/.config/ncmpcpp/config
+++ b/music/.config/ncmpcpp/config
@@ -35,7 +35,7 @@ progressbar_color = "white"
 progressbar_elapsed_color = "239"
 #--=[ Bars ]=---------------
 song_status_format = "{$8%a} $(26)❯$(26)> {$8%t} $(26)❯$(26)> $b{$8%b}$/b $b({$8%y})$/b$(end)"
-song_list_format = "$(111)%5n  $7%26a$7$(238) ❯ $(250)%44t$(1)$R$(238)❮ $(250)%5l $7%28b$(end)"
+song_list_format = "$(57)%5n  $(7)%26a$7$(238) ❯ $(250)%44t$(1)$R$(238)❮ $(250)%5l $7%28b$(end)"
 song_library_format = "{$(3)%n$(end)$(26) ❯ $(end)}{%t}|{%f}"
 now_playing_suffix = "$/b$(24)◂$(26)"
 current_item_prefix = "$b$(26)❯>"
@@ -44,7 +44,7 @@ current_item_inactive_column_prefix = "$b$(25)$(end)"
 current_item_inactive_column_suffix = "$/b$/r$(end)"
 titles_visibility = "no"
 header_visibility = "no"
-statusbar_visibility = "yes"
+statusbar_visibility = "no"
 #--=[ Media library ]=--------
 media_library_primary_tag = "artist"
 media_library_albums_split_by_date = "yes"
