--- a/media/.config/pipewire/pipewire.conf
+++ b/media/.config/pipewire/pipewire.conf
@@ -20,8 +20,10 @@ context.properties = {
     ## Properties for the DSP configuration.
     default.clock.rate          = 44100
     default.clock.allowed-rates = [ 44100 48000 88200 176400 352800 705600 96000 192000 384000 768000 ]
-    # default.clock.rate          = 768000
     # default.clock.allowed-rates = [ 176400 352800 705600 96000 192000 384000 768000 ]
+    # default.clock.allowed-rates = [ 705600 768000 ]
+    # default.clock.rate          = 705600
+    # default.clock.rate          = 768000
     default.clock.quantum       = 512
     default.clock.min-quantum   = 32
     default.clock.max-quantum   = 8192
